.kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eva
  labels:
    app: eva
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eva
  template:
    metadata:
      labels:
        app: eva
    spec:
      containers:
        - name: app
          image: git.intranet.hhw.ru:4567/divan-services/eva:<COMMIT_SHORT_SHA>
          imagePullPolicy: Always
          ports:
            - containerPort: 4444
          resources:
            limits:
              memory: 384Mi
            requests:
              memory: 384Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 4444
            initialDelaySeconds: 5
            periodSeconds: 5
