.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eva
  labels:
    app: eva
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 4444
      protocol: TCP
      name: http
  selector:
    app: eva
