.kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eva
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: <CI_COMMIT_REF_SLUG>.eva.hhw.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eva
                port:
                  number: 80
