.kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: eva-np
spec:
  podSelector:
    matchLabels:
      app: eva
  ingress:
    - {}
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
